--- a/css/common.css
+++ b/css/common.css
@@ -22,11 +22,10 @@ body{
 
 
 .handle {
-    position: relative;
-    top: 2%;
-    left: 30%;
+    position: absolute;
+    top: 3%;
+    left: 14.5%;
 }
-
 .horizantal-nav-description{
     font-size: 10px;
     padding-top: 23px;
