--- a/css/employee.css
+++ b/css/employee.css
@@ -12,12 +12,13 @@
 }
 .employees::after{
 
-        content: "";
-        background-color: #F44848;
-        width: 3px;
-        position: relative;
-        left: 44%;
-        border-radius: 2px 0px 0px 2px;
+    content: "";
+    background-color: #F44848;
+    width: 3px;
+    height: 40px;
+    position: absolute;
+    right: -9px;
+    border-radius: 2px 0px 0px 2px;
 }
 .employees-add-export {
     display: flex;
@@ -36,6 +37,7 @@
     height: 35px;
     margin-right: 21px;
     opacity: 0.7;
+    cursor: pointer;
 }
 .export-btn img{
     padding-right: 8px;
@@ -54,6 +56,7 @@
     display: inline-flex;
     padding: 13px;
     padding-left: 25px;
+    cursor: pointer;
 }
 
 .add-btn img{
@@ -78,19 +81,28 @@
 .filter a {
     text-decoration: none;
     color: #919DAC;
+    /* background-color: #EAEBEE;
+    padding: 10px 9px;
+    border-radius: 5px;
+    margin-left: 4px; */
+}
+.filter li{
+    display: inline-block;
     background-color: #EAEBEE;
     padding: 10px 9px;
     border-radius: 5px;
     margin-left: 4px;
+    width: 12px;
+    text-align: center;
 }
-.filter li{
-    display: inline-block;
-}
-.filter a:hover{
-    color: #ffffff;
+.filter li:hover{
     background-color: #F44848;
+    a{
+        color: white;
+    }
 
 }
+
 .drop-down-menu{
     display: none;
 }
@@ -109,6 +121,15 @@
 .del-btn{
     display: inline-flex;
 }
+#delete-btn{
+    cursor: pointer;
+}
+
+#filter-icon{
+    height: 40px;
+    padding-top: 15px;
+}
+
 .filter-search span{
     color: #F44848;
     margin-right: 5px;
@@ -128,7 +149,7 @@
     border-radius: 5px;
 }
 .apply-btn{
-    background-color: #F44848;
+    background-color: #ffabab;
     color: #ffffff;
 }
 
@@ -178,6 +199,9 @@ table th{
 table td{
     padding: 10px;
     font-size: 14x;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 table tr:hover{
     background-color: #FFF4F4;
@@ -199,6 +223,7 @@ table, th, td {
 }
 .sort-icon{
     padding-left: 8px;
+    cursor: pointer;
 }
 .table-heading{
     background-color: rgb(247 247 247);
@@ -206,11 +231,33 @@ table, th, td {
     top: 0px;
 }
 .employee-info {
+    position: relative;
     box-shadow: 0px 0px 4px rgb(212, 200, 200);
     width: 100%;
     overflow: scroll;
     margin-top: 10px;
     height: 56.79vh;
+}
+
+.user-width{
+    width: 270px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.floating-div{
+    position: absolute;
+    right: 3%;
+    background-color: #ebebeb;
+    width: 11%;
+    text-align: center;
+    display:none;
+}
+.floating-div p{
+    cursor: pointer;
+}
+.dots-image{
+    cursor: pointer;
 }
 
 
