--- a/css/addRole.css
+++ b/css/addRole.css
@@ -45,11 +45,14 @@ label{
     display: flex;
     column-gap: 20px;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 .display-flex input{
     width: 200px;
     padding: 6px;
     outline: none;
+    outline: none;
+    border: 1px solid grey;
 }
 select{
     width: 200px;
@@ -131,4 +134,93 @@ textarea{
 }
 #role-location{
     width: 325px;
+}
+
+textarea{
+    width:320px;
+    border: 1px solid #dfdfdf;
+}
+
+@media screen and (max-width:1156px) {
+    .admin-details{
+        width: 23%;
+    }
+    .search-box {
+        width: 43%;
+    }
+    
+}
+
+@media screen and (max-width:856px) {
+    .admin-details{
+        width: 30%;
+    }
+    .search-box {
+        width: 35%;
+    }
+}
+@media screen and (max-width:765px) {
+    .admin-details{
+        width: 32%;
+    }
+    .search-box {
+        width: 33%;
+    }
+    .admin-img {
+        width: 25px;
+        }
+    
+        .admin-name {
+            font-size: 10px;
+        }
+    
+        
+        .designation{
+            font-size: 11px;
+        }
+        .search-icon{
+            width: 15px;
+        }
+        .language-icon{
+            width: 25px;
+        }
+        .dashboard-icon{
+            width: 15px;
+        }
+        .mode-icon{
+            width: 27px;
+        }
+        .notifications-icon{
+            width: 31px;
+        }
+}
+
+@media screen and (max-width:526px) {
+    .admin-details p{
+        display: none;
+    }
+    .admin-details{
+        width: 15%;
+    }
+    .down-arrow{
+        width: 12px;
+    }
+    .basic-info{
+        display: block;
+    }
+}
+
+
+@media screen and (max-width:426px) {
+    #role-location {
+        width: 210px;
+    }
+    
+    textarea {
+        width: 190px;
+       
+    }
+    #assign-employees {
+        width: 200px;
+    }
 }
