--- a/css/add_employee.css
+++ b/css/add_employee.css
@@ -27,7 +27,7 @@
 }
 .add-employee{
     display: flex;
-    
+    flex-wrap: wrap;
     column-gap: 35px;
     font-size: 14px;
 }
@@ -42,6 +42,7 @@
 .display-flex{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 label{
     padding: 6px;
@@ -57,27 +58,36 @@ label{
     padding: 6px;
     width: 360px;
     outline: none;
+    border: 1px solid #d2d2d2;
+
 }
 .basic-info{
     display: flex;
     column-gap: 20px;
     margin-top: 20px;
+    flex-wrap: wrap;
+    margin:2px;
 }
 select{
     height: 34px;
     width: 375px;
     outline: none;
+    border: 1px solid #d2d2d2;
+
 }
 .buttons{
     padding-top: 50px;
     text-align: right;
-    width: 120%;
+    width: 100%;
     border-radius: 5px;
+    display: flex;
+    justify-content: right;
 }
 .buttons input{
     padding: 7px 20px;
     margin-left: 10px;
     border-radius: 5px;
+    
 }
 .cancel-btn{
     color: #F44848;
@@ -98,3 +108,90 @@ select{
     font-size: 10px;
     
 }
+
+@media screen and (max-width:1156px) {
+    .admin-details{
+        width: 23%;
+    }
+    .search-box {
+        width: 43%;
+    }
+    
+}
+
+@media screen and (max-width:1006px) {
+    .personal-info input{
+        width: 175px;
+    }
+    .employee-info input{
+        width: 240px;
+    }
+    select{
+        width: 256px;
+    } 
+}
+
+@media screen and (max-width:856px) {
+    .admin-details{
+        width: 27%;
+    }
+    .search-box {
+        width: 38%;
+    }
+    .personal-info input{
+        width: 140px;
+    }
+    .employee-info input{
+        width: 180px;
+    }
+    select{
+        width: 196px;
+    } 
+    .profile-img img {
+        border-radius: 110px;
+        width: 50px;
+    }
+}
+
+@media screen and (max-width:756px) {
+    .admin-img {
+        width: 25px;
+        }
+    
+        .admin-name {
+            font-size: 10px;
+        }
+    
+        
+        .designation{
+            font-size: 11px;
+        }
+        .search-icon{
+            width: 15px;
+        }
+        .language-icon{
+            width: 25px;
+        }
+        .dashboard-icon{
+            width: 15px;
+        }
+        .mode-icon{
+            width: 27px;
+        }
+        .notifications-icon{
+            width: 31px;
+        }
+}
+
+   @media screen and (max-width:526px) {
+    .admin-details p{
+        display: none;
+    }
+    .admin-details{
+        width: 15%;
+    }
+    .down-arrow{
+        width: 12px;
+    }
+}
+
