--- a/css/common.css
+++ b/css/common.css
@@ -23,7 +23,7 @@ body{
 
 .handle {
     position: absolute;
-    left: -15px;
+    left: 175px;
     top: 3%;
     cursor: pointer;
 }
@@ -41,7 +41,7 @@ body{
     padding:10px; 
 }
 .horizantal-nav-names{
-    font-size: 13px;
+    font-size: 12px;
     opacity: 0.7;
 }
 .horizontal-logos{
@@ -57,6 +57,7 @@ body{
     padding-left: 8px;
     border-radius: 5px;
     position: relative;
+    width: 170px;
 }
 
 .brand-logo {
@@ -112,8 +113,13 @@ body{
 
 .container{
     padding: 10px 15px;
-    width: calc(100% - 200px);
+    width: calc(100% - 230px);
     position: relative;
+    overflow: scroll;
+    height: 98vh;
+}
+.container::-webkit-scrollbar {
+    display: none;
 }
 
 .vertical-nav{
@@ -175,6 +181,7 @@ body{
     }
 .toggle .features{
         padding: 0px;
+        width: 46px;
     }
 /* .toggle .brand-logo{
     display: none;
@@ -182,4 +189,7 @@ body{
 .toggle .brand-icon{
     display: block;
     width: 45px;
+}
+.toggle .handle{
+    left:55px
 }
