--- a/css/addRole.css
+++ b/css/addRole.css
@@ -77,6 +77,7 @@ textarea{
     margin-left: 10px;
     width: 120px;
     border-radius: 5px;
+    cursor: pointer;
 }
 .cancel-btn{
     color: #F44848;
@@ -104,6 +105,7 @@ textarea{
     height: 28px;
     margin-top: 5px;
     box-shadow: 1px 1px 2px #e2e2e2;
+    text-overflow: ellipsis;
    
 }
 #display-column{
@@ -119,9 +121,17 @@ textarea{
 }
 .employee-list p{
     margin: 2px;
+    margin: 2px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 222px;
 }
 .employee-list div{
     display: flex;
+    text-align: left;
 }
 
 .employee-list input{
