--- a/css/role-descr.css
+++ b/css/role-descr.css
@@ -52,6 +52,7 @@
     height: 40px;
     box-shadow: 0px 0px 10px #ede5e5;
     display: inline-flex;
+    cursor: pointer;
 }
 .add-btn img{
     padding-right: 8px;
