--- a/css/roles.css
+++ b/css/roles.css
@@ -31,7 +31,6 @@
         border-radius: 2px 0px 0px 2px;
 }
 .add-btn {
-    padding: 4px;
     width: 141px;
     font-size: 14px;
     color: #ffffff;
@@ -42,6 +41,7 @@
     box-shadow: 0px 0px 10px #ede5e5;
     display: inline-flex;
     padding: 12px 12px 12px 18px;
+    cursor: pointer;
 }
 .add-btn img{
     padding-right: 8px;
@@ -88,6 +88,7 @@
     padding: 5px 10px;
     border: 1px solid #F44848;
     border-radius: 5px;
+    cursor: pointer;
 }
 .apply-btn{
     background-color: #f17b7b   ;
